--- a/IBISnewMinerals.html
+++ b/IBISnewMinerals.html
@@ -31,7 +31,7 @@
 
          <link rel="stylesheet"
               type="text/css"
-              href="DataInput.css"
+              href="minDataInput.css"
              >
         
     </head>
@@ -46,8 +46,9 @@
             <p id="headingText">Mineral Input Form</p>
         </div>
         <div id="pgButtons" class="littleDD">
-        	<input type="button" value="Submit Data" class="buttonclass littleDD" onclick="doSubmit()">   
-         <a href="IBISmain.html" class="buttonclass littleDD"><img src="" alt="">Back to Main Screen</a>
+        	<input type="button" value="Submit Data" class="linkC" onclick="doSubmit()"> 
+        	<a href="IBISutilities.html" class="linkC"><img src="" alt="">Back to Utilities</a>   
+		     	<a href="IBISmain.html" class="linkC">Back to Main</a>
         </div>
         <div id="detail_fs_min" class="littleDD" >
           <div id="headinglist" class="littleDD">
