--- a/IBISnewVegetables.html
+++ b/IBISnewVegetables.html
@@ -30,7 +30,7 @@
 
             <link rel="stylesheet"
               type="text/css"
-              href="DataInput.css"
+              href="vegDataInput.css"
              >
         
     </head>
@@ -42,8 +42,9 @@
 					 <div id="timeBlock">The Time</div>       
 				 </div>
 				  <div id="pgButtons" class="littleDD">
-        	<input type="button" value="Submit Data" class="buttonclass littleDD" onclick="doSubmit()">   
-         <a href="IBISmain.html" class="buttonclass littleDD"><img src="" alt="">Back to Main Screen</a>
+        	<input type="button" value="Submit Data" class="linkC" onclick="doSubmit()">
+        	<a href="IBISutilities.html" class="linkC"><img src="" alt="">Back to Utilities</a>    
+		     	<a href="IBISmain.html" class="linkC"><img src="" alt="">Back to Main</a>
         </div>
         <div name="Heading">
 	        <img id="logo_image" src="./images/Logo1_fullsizetransp.png">
