--- a/IBISregistration.html
+++ b/IBISregistration.html
@@ -21,7 +21,7 @@
 	</script>
         <link rel="stylesheet"
 		          type="text/css"
-		          href="./IBIS_maincss.css"
+		          href="./Breg.css"
               />
        <link rel="stylesheet" 
 			   type="text/css" 
@@ -42,8 +42,9 @@
       	<div id="allcontainer">
 			<form name="registerForm" method="POST" action="../../cgi-bin/IBIScontribRegister.php3" enctype="multipart/form-data" >
 				<div id=pgButtons>
-	    			<input type="button" id="buttonBtn" class="littleDD buttonclass" onclick="submitRegistration()" value="Submit">
-	      			<a id="backButton" href="/ibis/IBISmain.html" class="littleDD buttonclass">Back to Main Page </a>
+	    			<a id="backButton" href="/ibis/IBISmain.html" class="linkC">Back to Main </a>
+	    			<input type="button" id="buttonBtn" class="linkC" onclick="submitRegistration()" value="Submit">
+	      			
 	    		</div>
 	  			<fieldset id="detail_fs" class="littleDD">
         	    	<div id="personalDetails" class="littleDD">
