--- a/IBISsources.html
+++ b/IBISsources.html
@@ -70,7 +70,7 @@ srcSubmit();
 	    	<div id="src_fs_main" class="">
 	    	<div id="pgOptions">
 	    		<input type="button" value="New Source" onclick="showForm()" />
-	    		<input type="button" value="Edit Existing Source" onclick="updateForm()" />
+	    		<input type="button" value="Edit Existing" onclick="updateForm()" />
 	    	</div>
 	    	<div id="Ocontainer" class="hiddentext">
 	    		<div id="refContainer"></div>
