--- a/IBISutilities.html
+++ b/IBISutilities.html
@@ -29,7 +29,7 @@
         <img id="logo_image" src="./images/Logo1_fullsizetransp.png" />
       </div><div id="utilHeading">Utilities</div>
       <div id="controlP">
-        <a href="IBISmain.html" class="linkC"><img src="" alt="" />Back to Main Screen</a>
+        <a href="IBISmain.html" class="linkC"><img src="" alt="" />Back to Main</a>
       </div>
       <div id="detail_fs" class="littleDD detail_fs">
         <div id="AdminList" class="linklist littleDD locked">
@@ -49,12 +49,6 @@
 	<div id="listsList" class="linklist littleDD">
 	  <ul>
 	    <li>
-	      <a href="IBISanimalsRef.html">Animalia </a>
-	    </li>
-	    <li>
-              <a href="IBISplantsRef.html">Plantae</a>
-	    </li>
-	     <li>
 	    	<ul>
 	    		<li id="glList" onclick="showstuff()" class="linksclass">Glossary
 					<ul id="listStuff">
