--- a/IBISLostnFound.html
+++ b/IBISLostnFound.html
@@ -52,7 +52,7 @@
 	    <div id="pgHeading">Lost & Found</div>
 	   <div id="pgButtonslnf" class="littleDD">
 	   		<a href="IBISutilities.html" class="linkC"><img src="" alt="">Back to Utilities</a>
-        	<a href="IBISmain.html" class="buttonclassAI littleDD"><img src="" alt="">Back to Main Screen</a>
+        	<a href="IBISmain.html" class="buttonclassAI littleDD"><img src="" alt="">Back to Main</a>
          </div>
 	    <div id="detail_fs_main" class="littleDD">
 	    <div><span id="errDiv"></span></div>
