still working on bootstrap integration

--- a/IBISregistration.html
+++ b/IBISregistration.html
@@ -47,6 +47,7 @@
 			 		</div>
       	</div>
       	<div id="allcontainer" class="container">
+      	<div id="agreement"></div>
 			<form name="registerForm" role="form" class="form-horizontal" method="POST" action="../../cgi-bin/IBIScontribRegister.php3" enctype="multipart/form-data" >
 				<fieldset id="detail_fs" class="form-group">
       	 	<div id="personalDetails" class="littleDD">
