--- a/IBISLostnFound.html
+++ b/IBISLostnFound.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="EN" dir="ltr" xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <meta http-equiv="content-type" content="text/xml; charset=utf-8" />
-    <meta name="viewport" content="width=device-width"/>
-    <title>
+ <head>
+  <meta http-equiv="content-type" content="text/xml; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <title>
       I B I S - Lost & Found
     </title>
-    <script type="text/javascript" src="jquery-1.11.3.js"> </script>
+    <script type="text/javascript" src="jquery-1.11.3.js"></script>
+   <script src="http://192.168.43.132/ibis/js/bootstrap.js"></script>
     <script type="text/javascript" src="LnF.js"> </script>
     <script type="text/javascript" src="main.js"> </script>
     <script type="text/javascript" src="dateshorts.js"> </script>
-    <script type="text/javascript" src="picswap.js"> </script>
+     <link href="http://192.168.43.132/ibis/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet"
         type="text/css"
         href="Blnf.css"
@@ -18,7 +19,7 @@
     <link rel="stylesheet" 
     	type="text/css" 
     	media="only screen and (max-width: 580px)" 
-    	href="smallerDevice.css" />
+    	href="lnfsmall.css" />
     <script type="text/javascript">
     
 	$(document).ready(function(){
@@ -41,7 +42,7 @@
 
     </head>
     <body id="TheBody" onload="initForm()">
-      <div id="LnFallContainer" class="bigDD ac">
+      <div id="LnFallContainer" class="container">
 	    <div id="dateTime">
 	      <div id="dateBlock">The Date</div>
 	      <div id="timeBlock">The Time</div>       
@@ -51,10 +52,12 @@
 	    </div>
 	    <div id="pgHeading">Lost & Found</div>
 	   <div id="pgButtonslnf" class="littleDD">
-	   		<a href="IBISutilities.html" class="linkC"><img src="" alt="">Back to Utilities</a>
-        	<a href="IBISmain.html" class="buttonclassAI littleDD"><img src="" alt="">Back to Main</a>
+	   		<ul class="list-unstyled">
+					<li class="listItem button btn-large btn-info"><a href="IBISutilities.html" class=""><img src="" alt="">Utilities</a></li>
+  				<li class="listItem button btn-large btn-info"><a id="backButton" href="/ibis/IBISmain.html" class="">Main </a></li>
+				</ul>
          </div>
-	    <div id="detail_fs_main" class="littleDD">
+	    <div id="detail_fs_main" class="container">
 	    <div><span id="errDiv"></span></div>
 	    	<div id="LostBlock" onclick="moveUp(this)">
 	    		<span id="Lheading" class="headC" >
