...cant have cgi in docroot ...oops

--- a/IBISnewVegetables.html
+++ b/IBISnewVegetables.html
@@ -94,8 +94,7 @@
             <a id="sendeditButton" class="buttonclass littleDD" onclick="sendedit()">Send</a>
         	</div>  
         	
-        <form  name="VegForm" action="cgi/IBISnewVegetables.php3" method="POST" enctype="multipart/form-data" class="">	  			<fieldset id="dataForm" class="hiddentext">
-				    <input type="text" id = "Kingdom" name="Akingdom" value="Plantae" class="hiddentext">
+        <form  name="VegForm" action="../../cgi-bin/IBISnewVegetables.php3" method="POST" enctype="multipart/form-data" class="">	  			<fieldset id="dataForm" class="hiddentext">				    <input type="text" id = "Kingdom" name="Akingdom" value="Plantae" class="hiddentext">
 				    <input type="text" id="Phylum" name="phylum" class="hiddentext">
 				    <input type="text" id="subPhylum" name="subPhylum" class="hiddentext">
 				    <input type="text" id="Class" name="class" class="hiddentext">
@@ -147,8 +146,7 @@
 	 			
 	 			</form>
 	 			<div id="SrcBlock" class="hiddentext">
-			 	<form name="SourceF" action="cgi/IBISsrc.php3" method="POST" enctype="mulipart/form-data">	    			<fieldset>
-	    				<span><label>Type</label>
+			 	<form name="SourceF" action="../../cgi-bin/IBISsrc.php3" method="POST" enctype="mulipart/form-data">	    			<fieldset>	    				<span><label>Type</label>
 	    				<select name="type" id="type">
 	    					<option>Book</option>
 	    					<option>Web Page</option>
@@ -179,8 +177,7 @@
 	    			<input type="button" value="Submit" class="buttonC" onclick="srcSubmit()"/>
 	    			<input type="button" value="Dismiss" class="buttonC" onclick="closeThis()" />
 			 	</div>
-	 			<form  name="VegDupEditForm" action="cgi/IBISeditStuff.php3" method="POST" enctype="multipart/form-data" class="hiddentext">						<input type="text" name="thecat" value="Vegetables" id="thecatid" class="hiddentext" />
-						<input type="text" name="specref" value="" id="specid" class="hiddentext" />
+	 			<form  name="VegDupEditForm" action="../../cgi-bin/IBISeditStuff.php3" method="POST" enctype="multipart/form-data" class="hiddentext">						<input type="text" name="thecat" value="Vegetables" id="thecatid" class="hiddentext" />						<input type="text" name="specref" value="" id="specid" class="hiddentext" />
 				</form>
 	 			<div id="messageDiv">
 	 				<div id="infoDiv"></div>
