--- a/IBISregistration.html
+++ b/IBISregistration.html
@@ -48,8 +48,7 @@
       	</div>
       	<div id="allcontainer" class="container">
       	<div id="agreement"></div>
-			<form name="registerForm" role="form" class="form-horizontal" method="POST" action="cgi/IBIScontribRegister.php3" enctype="multipart/form-data" >				<fieldset id="detail_fs" class="form-group">
-      	 	<div id="personalDetails" class="littleDD">
+			<form name="registerForm" role="form" class="form-horizontal" method="POST" action="../../cgi-bin/IBIScontribRegister.php3" enctype="multipart/form-data" >				<fieldset id="detail_fs" class="form-group">      	 	<div id="personalDetails" class="littleDD">
       			<p>
 		  	 			<label class="labelClass " for="fName" >First name </label>
        				<input type="text" name="name" id="fName" class="inputClass form-control requiredf" disable maxlength="10" onchange="checkWords(this)" />
