--- a/IBISsources.html
+++ b/IBISsources.html
@@ -79,8 +79,7 @@ srcSubmit();
 	    			<div id="refContainer"></div>
 	    			<input type="button" value="Edit it" onclick="updF()" class="button btn-large btn-info"/>
 	    		</div>
-	    		<form id="dataF" name="SourceF" action="cgi/IBISsrc.php3" method="POST" enctype="mulipart/form-data" class="hiddentext">	    			<fieldset>
-	    					<div class="inputSet" >
+	    		<form id="dataF" name="SourceF" action="../../cgi-bin/IBISsrc.php3" method="POST" enctype="mulipart/form-data" class="hiddentext">	    			<fieldset>	    					<div class="inputSet" >
 									<label class="labelC" >Type</label>
 									<select name="type" id="type" class="inputC" >
 										<option>Book</option>
