--- a/cleanT.html
+++ b/cleanT.html
@@ -5,8 +5,7 @@
 		<title>clean mediatables</title>
 	</head>
 	<body>
-	<form name="cleanF" action="cgi/cleanout.php3" enctype="multipart/form-data" method="POST">	<fieldset>
-		<textarea name="mediaTlist"></textarea>
+	<form name="cleanF" action="../../cgi-bin/cleanout.php3" enctype="multipart/form-data" method="POST">	<fieldset>		<textarea name="mediaTlist"></textarea>
 		<textarea name="dataTlist"></textarea>
 		<input type="submit">
 	</fieldset>
