--- a/IBISmain.html
+++ b/IBISmain.html
@@ -77,7 +77,7 @@
 				<span id="LinkList" class="" >
 					<p class="">Eco Links</p>
 					<ul class="list-unstyled">
-						<li><a href="IBISutilities.html">Utilities</a></li>
+						<li onclick="checkReg()"><span id="utilLink" class="linksclass" onclick="checkReg()">Utilities</span></li>
 					</ul>
 				</span>
 	    </div>
@@ -92,6 +92,23 @@
 		function loadIndex(catname){
 	    	$("#catValue").val(catname);
 	    	$(categoryForm).submit();
+    	}
+    	function checkReg(){
+    	var refVar = sessionStorage.userRef;
+    	var retVal = "";
+    		if (!sessionStorage.userRef || refVar == "") {
+    		var regMessg = "<span id=\"clsbox\" onclick=\"closeDiag()\">X</span><span id=\"messID\">You must register to access these functions <br \><a href=\"IBISregistration.html\" class=\"linksclass\">Register</a> </span>";
+    		$("#errorDiv").html(regMessg);
+    		$("#errorDiv").show();
+    		//retVal = false;
+    	    		
+    	}else {
+    	document.location = "IBISutilities.html";
+    	}
+    	
+ 		}
+    	function closeDiag() {
+    		$("#errorDiv").hide();
     	}
     </script>
 </html>
