added ajax upload utility

--- a/IBISanimalsRef.html
+++ b/IBISanimalsRef.html
@@ -7,8 +7,7 @@
     <title>Animalia</title>
     <link rel="stylesheet" href="Kingdom_Plantae.html_files/treestyles.css" type="text/css"/>
     <link rel="stylesheet" href="details.css" type="text/css">
-    <script type="text/javascript" src="jquery-1.11.3.js"> </script>
-    <script type="text/javascript" src="main.js"> </script>
+    <script type="text/javascript" src="jquery-2.1.1.min.js"> </script>    <script type="text/javascript" src="main.js"> </script>
     <script type="text/javascript" src="dateshorts.js"> </script>
  <script type="text/javascript" src="picswap.js"> </script>
     <script type="text/javascript" src="Kingdom_Plantae.html_files/marktree.js"> 
