--- a/IBISnewMinerals.html
+++ b/IBISnewMinerals.html
@@ -7,11 +7,11 @@
         <title>
             I B I S - Mineral Input Form
         </title>
-        <script type="text/javascript" src="jquery-1.11.3.js"> </script>
-        <script src="http://192.168.43.132/ibis/js/bootstrap.js"></script>
+        <script type="text/javascript" src="jquery-2.1.1.min.js"> </script>        <script src="http://192.168.43.132/ibis/js/bootstrap.js"></script>
         <script type="text/javascript" src="dataInputFunctions.js"></script>
         <script type="text/javascript" src="fileselect.js"></script>
         <script type="text/javascript" src="dateshorts.js"> </script>
+         <link href="jquery.dm-uploader.min.css" rel="stylesheet">
 	
 	<script type="text/javascript">
 		$(document).ready(function(){
@@ -110,10 +110,31 @@
 							<textarea id="Image_Tags" name = "Mimg_Tags" class="hiddentext"></textarea>
 							<input type="text" name="Macclvl" id="acclevel" class="hiddentext" value="">
 							<input type="text" name="contributer_ID" id="contrib_ID" class="hiddentext" value="">
-							<div id="images" class="littleDD">
-          		<span class="labelclass">Add Media</span><br />
-	      			<input type="file" name="ibismedia[]" id="mediaPic" class="" multiple />
-	      		</div>
+							<div class="row">
+        <div class="col-md-6 col-sm-12">
+					<div id="drag-and-drop-zone" class="dm-uploader p-5">
+            <h3 class="mb-5 mt-5 text-muted">Drag &amp; drop files here</h3>
+
+            <div class="btn btn-primary btn-block mb-5">
+                <span>Open the file Browser</span>
+                <input id="mediaPic" type="file" title='Click to add Files' />
+            </div>
+          </div>
+          
+        </div>
+       
+        <div class="col-md-6 col-sm-12">
+          <div class="card h-100">
+            <div class="card-header">
+              File List
+            </div>
+
+            <ul class="list-unstyled p-2 d-flex flex-column col" id="files">
+              <li class="text-muted text-center empty">No files uploaded.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
 	      		<input type="text" name="thecat" value="Minerals" id="thecatid" class="hiddentext" />
 	      		<div id="tagslist"></div>
 	      		<div id="imgDisplay" class=""></div>
@@ -177,5 +198,26 @@
 			</div>
   		</div>
     </div>
+    <div id="ajaxBox"></div>
+    	<script src="jquery.dm-uploader.min.js"></script>
+    	 <script type="text/javascript" src="minAsyncUpload.js"></script>
+    	 <script src="demo-ui.js"></script>
+    	  <script type="text/html" id="files-template">
+      <li class="media">
+        <div class="media-body mb-1">
+          <p class="mb-2">
+            <strong>%%filename%%</strong> - Status: <span class="text-muted">Waiting</span>
+          </p>
+          <div class="progress mb-2">
+            <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" 
+              role="progressbar"
+              style="width: 0%" 
+              aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+            </div>
+          </div>
+          <hr class="mt-1 mb-1" />
+        </div>
+      </li>
+    </script>
  </body>
 </html>
