--- a/IBISpiccompare.html
+++ b/IBISpiccompare.html
@@ -6,8 +6,7 @@
         <title>
         Picture Compare
         </title>
-        <script type="text/javascript" src="jquery-1.11.3.js"></script>
-        <script type="text/javascript" src="Gmain.js"></script>
+        <script type="text/javascript" src="jquery-2.1.1.min.js"></script>        <script type="text/javascript" src="Gmain.js"></script>
         <script type="text/javascript" src="/ibis/dateshorts.js"></script>
          <script type="text/javascript">
 	 	$(document).ready(function(){
@@ -153,8 +152,7 @@ include ("IBISvars.inc");
         <title>
         Image Match Result
         </title>
-        <script type="text/javascript" src="http://192.168.43.132/ibis/jquery-1.11.3.js"> </script>
-        <script type="text/javascript" src="http://192.168.43.132/ibis/Gmain.js"></script>
+        <script type="text/javascript" src="http://192.168.43.132/ibis/jquery-2.1.1.min.js"> </script>        <script type="text/javascript" src="http://192.168.43.132/ibis/Gmain.js"></script>
         <script type="text/javascript">
         	function closeThis(){
         		close();
