--- a/IBISregDetails.html
+++ b/IBISregDetails.html
@@ -5,8 +5,7 @@
         <title>
             I B I S - Animal Input Form
         </title>
-        <script type="text/javascript" src="jquery-1.11.3.js"> </script>
-        <script type="text/javascript" src="main.js"> </script>
+        <script type="text/javascript" src="jquery-2.1.1.min.js"> </script>        <script type="text/javascript" src="main.js"> </script>
         <script type="text/javascript" src="fileselect.js"></script>
         <script type="text/javascript" src="dateshorts.js"> </script>
         <script type="text/javascript" src="dataInputFunctions.js"></script>	
