--- a/IBISsources.html
+++ b/IBISsources.html
@@ -6,8 +6,7 @@
 		<title>
 			IBIS Sources Entry Page
 		</title>
-		<script type="text/javascript" src="jquery-1.11.3.js"> </script>
-		<script src="http://192.168.43.132/ibis/js/bootstrap.js"></script>
+		<script type="text/javascript" src="jquery-2.1.1.min.js"> </script>		<script src="http://192.168.43.132/ibis/js/bootstrap.js"></script>
     	<script type="text/javascript" src="dataInputFunctions.js"></script>
     	<script type="text/javascript" src="fileselect.js"></script>
     	<script type="text/javascript" src="dateshorts.js"> </script>
