--- a/IBISmain.html
+++ b/IBISmain.html
@@ -7,13 +7,13 @@
       I B I S - Indexed Biological Information Server
     </title>
     <script type="text/javascript" src="jquery-2.1.1.min.js"> </script>
-    <script src="http://192.168.43.132/ibis/js/bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script type="text/javascript" src="main.js"> </script>
     <script type="text/javascript" src="dateshorts.js"> </script>
     <script type="text/javascript" src="picswap.js"> </script>
     <script type="text/javascript" src="cookies.js"> </script>
     <script type="text/javascript" src="login.js"></script>
-    <link href="http://192.168.43.132/ibis/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet"
         type="text/css"
         href="Bmain.css"
