--- a/IBISutilities.html
+++ b/IBISutilities.html
@@ -6,8 +6,7 @@
   <title>
    I B I S - Other Functions
   </title>
-  <script type="text/javascript" src="jquery-1.11.3.js"></script>
-   <script src="http://192.168.43.132/ibis/js/bootstrap.js"></script>
+  <script type="text/javascript" src="jquery-2.1.1.min.js"></script>   <script src="http://192.168.43.132/ibis/js/bootstrap.js"></script>
   <script type="text/javascript" src="Gmain.js"></script>
   <script type="text/javascript" src="dateshorts.js"></script>
    <link href="http://192.168.43.132/ibis/css/bootstrap.min.css" rel="stylesheet"/>
