--- a/IBISvegGlossaryEntry.html
+++ b/IBISvegGlossaryEntry.html
@@ -5,8 +5,7 @@
 <title>
   Enter Vegetable LookUp Terms
 </title>
-<script type="text/javascript" src="jquery-1.11.3.js"> </script>
-<script type="text/javascript" src="Gmain.js"> </script>
+<script type="text/javascript" src="jquery-2.1.1.min.js"> </script><script type="text/javascript" src="Gmain.js"> </script>
 <script type="text/javascript" src="dateshorts.js"> </script>
 
 <script type="text/javascript">
