desktop version looking good

--- a/IBISLostnFound.html
+++ b/IBISLostnFound.html
@@ -6,7 +6,8 @@
   <title>
       I B I S - Lost & Found
     </title>
-    <script type="text/javascript" src="jquery-2.1.1.min.js"></script>   <script src="http://192.168.43.132/ibis/js/bootstrap.js"></script>
+    <script type="text/javascript" src="jquery-2.1.1.min.js"></script>
+    <script src="http://192.168.43.132/ibis/js/bootstrap.js"></script>
     <script type="text/javascript" src="LnF.js"> </script>
     <script type="text/javascript" src="main.js"> </script>
     <script type="text/javascript" src="dateshorts.js"> </script>
@@ -52,8 +53,8 @@
 	    <div id="pgHeading">Lost & Found</div>
 	   <div id="pgButtonslnf" class="littleDD">
 	   		<ul class="list-unstyled">
-					<li class="listItem button btn-large btn-info"><a href="IBISutilities.html" class=""><img src="" alt="">Utilities</a></li>
-  				<li class="listItem button btn-large btn-info"><a id="backButton" href="/ibis/IBISmain.html" class="">Main </a></li>
+					<li class="linkC"><a href="IBISutilities.html" class=""><img src="" alt="">Utilities</a></li>
+  				<li class="linkC"><a id="backButton" href="/ibis/IBISmain.html" class="">Main </a></li>
 				</ul>
          </div>
 	    <div id="detail_fs_main" class="container">
