--- a/IBISnewVegetables.html
+++ b/IBISnewVegetables.html
@@ -59,9 +59,9 @@
 	        <p id="headingText">Vegetable Input Form</span>
         </div>
         <div id="pgButtons" class="row">
-        	<a href="IBISutilities.html" class="linkC  btn-large btn-info"><img src="" alt="">Utilities</a>   
-		     	<a href="IBISmain.html" class="linkC  btn-large btn-info">Main</a>
-        	<input type="button" value="Submit" class="linkC  btn-large btn-info" onclick="doSubmit()"> 
+        	<a href="IBISutilities.html" class="linkC"><img src="" alt="">Utilities</a>   
+		     	<a href="IBISmain.html" class="linkC ">Main</a>
+        	<input type="button" value="Submit" class="linkC" onclick="doSubmit()"> 
         </div>
         <div id="detail_fs_min" class="container" >
           <div id="headinglist" class="subContainer">
