--- a/IBISutilities.html
+++ b/IBISutilities.html
@@ -33,7 +33,7 @@
       		</div>
       		<div id="utilHeading">Utilities</div>
       		<div id="controlP">
-        		<a href="IBISmain.html" class="listItem button btn-large btn-info" ><img src="" alt="" />Back to Main</a>
+        		<a href="IBISmain.html" class="linkC" ><img src="" alt="" />Back to Main</a>
       		</div>
       		<div id="detail_fs" class="littleDD detail_fs">
         		<div id="AdminList" class="linklist littleDD locked">
