my god it feels like i am just running around putting out fires, but it is getting better

--- a/IBISLostnFound.html
+++ b/IBISLostnFound.html
@@ -66,7 +66,7 @@
 	    		<input type="button" id="animBut" class="selectB" value=Animals onclick="andThis(this)" />
 	    		<input type="button" id="vegBut"  class="selectB" value=Vegetables onclick="andThis(this)" />
 	    		<div id="messDiv">
-	    			<span class="messSpan"> Clicking one of the buttons presents a list of data entries that can not be displayed in the index because of deficient information. Click on an entry to edit it, you must at least add a picture to make the entry available in the index </span>
+	    			<span class="messSpan"> Clicking one of the buttons presents a list of data entries that can not be displayed in the index because of deficient information. Click on an entry to edit it, you must add a picture to make the entry available in the index </span>
 	    		</div>
 	    		<form name="lnfForm" action="../../cgi-bin/IBISeditStuff.php3" method="POST" enctype="multipart/form-data">					<input type="text" id="catVal" name="thecat" class="hiddentext" value=""/>					<input type="text" id="recID" name="recID" class="hiddentext" value=""/>
 					<input type="text" id="gen" name="genref" class="hiddentext" value=""/>
