--- a/IBISnewMinerals.html
+++ b/IBISnewMinerals.html
@@ -66,7 +66,7 @@
 				    <span><label class="thisareaLabel littleDD " onclick="loadcontent(this)">Group</label></span>
 				    <span><label class="thisareaLabel littleDD " onclick="loadcontent(this)">Crystal System</label></span>
 				    <span><label class="thisareaLabel littleDD " onclick="loadcontent(this)">Habit</label></span>
-				    <span><label class="thisareaLabel littleDD " onclick="loadcontent(this)">Chemical Formula</label></span>
+				    <span><label class="thisareaLabel littleDD " onclick="loadcontent(this)">Formula</label></span>
 				    <span><label class="thisareaLabel littleDD " onclick="loadcontent(this)">Hardness</label></span>
 				    <span><label class="thisareaLabel littleDD " onclick="loadcontent(this)">Density</label></span>
 				    <span><label class="thisareaLabel littleDD " onclick="loadcontent(this)">Cleavage</label></span>
