--- a/IBISnewVegetables.html
+++ b/IBISnewVegetables.html
@@ -59,7 +59,7 @@
 	        <p id="headingText">Vegetable Input Form</span>
         </div>
         <div id="pgButtons" class="row">
-        	<a href="IBISutilities.html" class="linkC"><img src="" alt="">Utilities</a>   
+        	<a href="IBISutilities.html" class="linkC">Utilities</a>   
 		     	<a href="IBISmain.html" class="linkC ">Main</a>
         	<input type="button" value="Submit" class="linkC" onclick="doSubmit()"> 
         </div>
@@ -126,8 +126,7 @@
 						<div class="row">
         <div class="col-md-6 col-sm-12">
 					<div id="drag-and-drop-zone" class="dm-uploader p-5">
-            <h3 class="mb-5 mt-5 text-muted">Drag &amp; drop files here</h3>
-
+            
             <div class="btn btn-primary btn-block mb-5">
                 <span>Open the file Browser</span>
                 <input id="mediaPic" type="file" title='Click to add Files' />
